Archive/bf066b53c627349c71fa8333bd4b990b-61c3814520a8d4318f681038dc4b4da7/output
main.cpp:1:7: error: 'string' in namespace 'std' does not name a type
 const std::string strVertexShader(
       ^
